{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 21,
  "lineage": "962fa3e7-bde8-657f-2641-29332d400d03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "192.168.0.5",
            "domain": "vpc",
            "id": "eipalloc-0b38b494d5027528b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-211-105-120.compute-1.amazonaws.com",
            "public_ip": "3.211.105.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Production-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "production-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654514088886:internet-gateway/igw-04ef203fda402959f",
            "id": "igw-04ef203fda402959f",
            "owner_id": "654514088886",
            "tags": {
              "Name": "Production-IGW"
            },
            "vpc_id": "vpc-041f865c5d7a63afc"
          },
          "dependencies": [
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b38b494d5027528b",
            "id": "nat-0185e6c73bb2a4466",
            "network_interface_id": "eni-0d163735b6a92e784",
            "private_ip": "192.168.1.235",
            "public_ip": "3.211.105.120",
            "subnet_id": "subnet-0b79d99667c40a079",
            "tags": {
              "Name": "Production-NAT-GW"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-subnet-1",
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0759b0ca3329718441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0185e6c73bb2a4466",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0759b0ca332971844",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04ef203fda402959f",
            "id": "r-rtb-0f8057f114df066701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8057f114df06670",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0759b0ca332971844",
            "owner_id": "654514088886",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-Route-Table"
            },
            "vpc_id": "vpc-041f865c5d7a63afc"
          },
          "dependencies": [
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f8057f114df06670",
            "owner_id": "654514088886",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "vpc_id": "vpc-041f865c5d7a63afc"
          },
          "dependencies": [
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c001a66ae2a71a52",
            "route_table_id": "rtb-0759b0ca332971844",
            "subnet_id": "subnet-067e249706c4eab99"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bdbf68b25e32ce8",
            "route_table_id": "rtb-0759b0ca332971844",
            "subnet_id": "subnet-065fada4438aa145c"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c1fe5c14abc3d6e",
            "route_table_id": "rtb-0759b0ca332971844",
            "subnet_id": "subnet-00969ebdfb6677af4"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-3",
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073c7fae217fc4998",
            "route_table_id": "rtb-0f8057f114df06670",
            "subnet_id": "subnet-0b79d99667c40a079"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01553c7e3f1872882",
            "route_table_id": "rtb-0f8057f114df06670",
            "subnet_id": "subnet-0edad707f61382bf4"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bb250905f424ec8",
            "route_table_id": "rtb-0f8057f114df06670",
            "subnet_id": "subnet-00af1eae7e4bd7c87"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-3",
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654514088886:subnet/subnet-067e249706c4eab99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-067e249706c4eab99",
            "map_public_ip_on_launch": false,
            "owner_id": "654514088886",
            "tags": {
              "Name": "Private-Subent-1"
            },
            "vpc_id": "vpc-041f865c5d7a63afc"
          },
          "dependencies": [
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654514088886:subnet/subnet-065fada4438aa145c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-065fada4438aa145c",
            "map_public_ip_on_launch": false,
            "owner_id": "654514088886",
            "tags": {
              "Name": "Private-Subent-2"
            },
            "vpc_id": "vpc-041f865c5d7a63afc"
          },
          "dependencies": [
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654514088886:subnet/subnet-00969ebdfb6677af4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.6.0/24",
            "id": "subnet-00969ebdfb6677af4",
            "map_public_ip_on_launch": false,
            "owner_id": "654514088886",
            "tags": {
              "Name": "Private-Subent-3"
            },
            "vpc_id": "vpc-041f865c5d7a63afc"
          },
          "dependencies": [
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654514088886:subnet/subnet-0b79d99667c40a079",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0b79d99667c40a079",
            "map_public_ip_on_launch": false,
            "owner_id": "654514088886",
            "tags": {
              "Name": "Public-Subent-1"
            },
            "vpc_id": "vpc-041f865c5d7a63afc"
          },
          "dependencies": [
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654514088886:subnet/subnet-0edad707f61382bf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0edad707f61382bf4",
            "map_public_ip_on_launch": false,
            "owner_id": "654514088886",
            "tags": {
              "Name": "Public-Subent-2"
            },
            "vpc_id": "vpc-041f865c5d7a63afc"
          },
          "dependencies": [
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654514088886:subnet/subnet-00af1eae7e4bd7c87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-00af1eae7e4bd7c87",
            "map_public_ip_on_launch": false,
            "owner_id": "654514088886",
            "tags": {
              "Name": "Public-Subent-3"
            },
            "vpc_id": "vpc-041f865c5d7a63afc"
          },
          "dependencies": [
            "aws_vpc.productionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "productionvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654514088886:vpc/vpc-041f865c5d7a63afc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0caf3d735913a3530",
            "default_route_table_id": "rtb-0c1144c774cf4eff8",
            "default_security_group_id": "sg-015dc03b4d4690a1e",
            "dhcp_options_id": "dopt-01c2ab7b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-041f865c5d7a63afc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c1144c774cf4eff8",
            "owner_id": "654514088886",
            "tags": {
              "Name": "Production"
            }
          }
        }
      ]
    }
  ]
}